--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.1.4",
+    "body-parser": "^1.15.2",
     "dotenv": "^4.0.0",
     "eris": "^0.5.1",
     "express": "^4.14.0",
