--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "main": "server.js",
   "author": "",
   "license": "ISC",
   "dependencies": {
